--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
         .cart-modal {
             display: none;
             position: fixed;
+            top: 50%;
             left: 50%;
-            transform: translateX(-50%);
+            transform: translate(-50%, -50%);
             background: linear-gradient(135deg, #fff, #f1f1f1);
             padding: 20px 10px;
-            border-radius: 16px 16px 0 0;
-            box-shadow: 0px -4px 24px rgba(0,0,0,0.18);
+            border-radius: 16px;
+            box-shadow: 0 4px 24px rgba(0,0,0,0.18);
             width: 100%;
             max-width: 420px;
-            bottom: 0;
             z-index: 101;
             border: 3px solid #ddcf0e;
             text-align: center;
