--- a/order-summary.html
+++ b/order-summary.html
@@ -34,6 +34,32 @@
         }
         .back-btn:hover { background: #c7bc10; }
         .empty { color: #888; text-align:center; margin: 30px 0; }
+        form.checkout-form { margin-top:32px; }
+        .form-group { margin-bottom: 16px; }
+        label { font-weight:bold; display:block; margin-bottom:6px; }
+        input, select, textarea {
+            width: 100%;
+            padding: 8px;
+            font-size: 1em;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+        textarea { resize: vertical; min-height: 48px; }
+        .submit-btn {
+            width:100%;
+            background: #155824;
+            color: #fff;
+            border: none;
+            border-radius: 6px;
+            padding: 12px 0;
+            font-size: 1.1em;
+            cursor: pointer;
+            margin-top: 10px;
+            transition: background 0.2s;
+        }
+        .submit-btn:hover { background: #28a745; }
+        .required { color: #c02618; }
     </style>
 </head>
 <body>
@@ -41,6 +67,31 @@
         <h1>Your Order Summary</h1>
         <ul id="order-list"></ul>
         <div class="total" id="order-total"></div>
+        <form class="checkout-form" id="checkout-form" autocomplete="off">
+            <div class="form-group">
+                <label for="name">Full Name <span class="required">*</span></label>
+                <input type="text" id="name" name="name" maxlength="40" required>
+            </div>
+            <div class="form-group">
+                <label for="phone">Phone Number <span class="required">*</span></label>
+                <input type="tel" id="phone" name="phone" maxlength="15" pattern="^09\d{9}$" placeholder="Ex: 09XXXXXXXXX" required>
+            </div>
+            <div class="form-group">
+                <label for="address">Full Address <span class="required">*</span></label>
+                <textarea id="address" name="address" maxlength="120" placeholder="Street, Barangay, City/Municipality, Province, Postal Code, Region" required></textarea>
+                <small>Must be a valid Philippine address with region and postal code.</small>
+            </div>
+            <div class="form-group">
+                <label for="payment">Mode of Payment <span class="required">*</span></label>
+                <select id="payment" name="payment" required>
+                    <option value="">-- Select Payment Method --</option>
+                    <option value="Gcash">Gcash</option>
+                    <option value="Paymaya">Paymaya</option>
+                    <option value="Paypal">Paypal</option>
+                </select>
+            </div>
+            <button type="submit" class="submit-btn">Place Order</button>
+        </form>
         <a href="index.html" class="back-btn">Back to Shop</a>
     </div>
     <script>
@@ -52,6 +103,7 @@
         if (cart.length === 0) {
             orderList.innerHTML = "<li class='empty'>Your cart is empty.</li>";
             orderTotal.textContent = "";
+            document.getElementById('checkout-form').style.display = "none";
         } else {
             cart.forEach(item => {
                 const li = document.createElement('li');
@@ -61,6 +113,55 @@
             });
             orderTotal.textContent = `Total: ₱${total.toFixed(2)}`;
         }
+
+        // Simple Philippines address check (just checks "Philippines" or PH in text)
+        function isPhilippinesAddress(address) {
+            // You can improve this logic as needed!
+            return /philippines|ph\b/i.test(address);
+        }
+
+        document.getElementById('checkout-form').onsubmit = function(e){
+            e.preventDefault();
+            const name = document.getElementById('name').value.trim();
+            const phone = document.getElementById('phone').value.trim();
+            const address = document.getElementById('address').value.trim();
+            const payment = document.getElementById('payment').value;
+
+            if (!name || !phone || !address || !payment) {
+                alert("Please fill out all required fields.");
+                return false;
+            }
+
+            // Validate phone (Philippines mobile: 09XXXXXXXXX)
+            if (!/^09\d{9}$/.test(phone)) {
+                alert("Please enter a valid Philippine mobile number (09XXXXXXXXX).");
+                document.getElementById('phone').focus();
+                return false;
+            }
+
+            // Validate address (must contain "Philippines" or "PH")
+            if (!isPhilippinesAddress(address)) {
+                alert("Your address must be in the Philippines and include 'Philippines' or 'PH'.");
+                document.getElementById('address').focus();
+                return false;
+            }
+
+            // For now, just show a summary and "success" message
+            alert(
+                "Order placed!\n\n" +
+                `Name: ${name}\n` +
+                `Phone: ${phone}\n` +
+                `Address: ${address}\n` +
+                `Payment: ${payment}\n\n` +
+                "Thank you for your order! We will contact you soon."
+            );
+            // Optionally, clear cart and form
+            localStorage.removeItem('cart');
+            document.getElementById('checkout-form').reset();
+            orderList.innerHTML = "<li class='empty'>Your cart is empty.</li>";
+            orderTotal.textContent = "";
+            document.getElementById('checkout-form').style.display = "none";
+        };
     </script>
 </body>
 </html>
