--- a/index.html
+++ b/index.html
@@ -419,7 +419,6 @@
     <main>
     <section class="hero">
         <h1>MARIE CUSTOM GOODS</h1>
-        <p>Welcome to Marie Custom Goods! 🎨✨ We’re a creative team dedicated to bringing your custom designs to life. Whether it’s a quirky t-shirt, a personalized mug, or unique office decor, we make it happen.</p>
         <p>Your go-to shop for personalized prints & custom products!</p>
         <a href="#products" class="cta-button" aria-label="Start Designing">Start Designing</a>
     </section>
@@ -433,7 +432,8 @@
             </div>
             
             <div class="why-brief">
-                We’re a creative team dedicated to bringing your custom designs to life. Whether it’s a quirky t-shirt, a personalized mug, or unique office decor, we make it happen. 🎨✨
+                <strong>🎨 WELCOME ✨</strong><BR><BR>
+                We’re a creative team dedicated to bringing your custom designs to life. Whether it’s a quirky t-shirt, a personalized mug, or unique office decor, we make it happen.
             </div>
             
             <div class="why-item" tabindex="0">
