--- a/order-summary.html
+++ b/order-summary.html
@@ -163,20 +163,20 @@
         </form>
         <div class="success-message" id="success-message" style="display:none;">
             Thank you for your order!<br>
-            We’ll contact you via SMS or email shortly and send you a payment link or QR code for your chosen payment platform.<br>
+            We’ll contact you via SMS or email shortly and send you a payment link or QR code for your chosen payment platform.<br><br>
             <b>Please keep your phone open for a confirmation text!</b>
         </div>
 
         <!-- INFO BOX: ORDER PROCESSING & CUSTOMER NOTICE -->
         <div class="order-info-box">
-            <strong>Order Processing & Confirmation:</strong><br>
+            <strong>Order Processing & Confirmation</strong><br><br>
             We will process your order within our business hours:<br>
             <strong>Monday – Friday: 9:00 AM – 6:00 PM</strong><br>
             Saturday & Sunday: Closed<br><br>
-            Our representative will get in touch with you to give you the final calculation of shipping fee and total order. You will then receive a direct payment link for your chosen payment platform.<br>
+            Our representative will get in touch with you to give you the final calculation of shipping fee and total order. You will then receive a direct payment link for your chosen payment platform.<br><br>
             <strong>Please complete your payment within 24 hours to avoid cancellation.</strong><br><br>
             Processing your items will take <strong>1 to 3 working days</strong>. Shipping time may vary depending on your location and the logistics provider.<br><br>
-            If you have any questions or need assistance, please contact us at <a href="mailto:contact@mariecustomgoods.com">contact@mariecustomgoods.com</a>.<br>
+            If you have any questions or need assistance, please contact us at <a href="mailto:contact@mariecustomgoods.com">contact@mariecustomgoods.com</a>.<br><br>
             <strong>Thank you for your order with MARIE CUSTOM GOODS. We look forward to your next purchase!</strong>
         </div>
 
