--- a/index.html
+++ b/index.html
@@ -631,8 +631,13 @@
     <div id="toast" role="status" aria-live="polite">Added to cart!</div>
 
     <footer>
-        <p>&copy; DTI Permit # 7654321 | 2023 MARIE CUSTOM GOODS - NCR. All rights reserved. <br>
-        For inquiries, contact us at <a href="mailto:contact@mariecustomgoods.com">contact@mariecustomgoods.com</a></p>
+      <p>
+        &copy; DTI Permit # 7654321 | 2023 MARIE CUSTOM GOODS - NCR. All rights reserved.<br>
+        <a href="privacy-policy.html">Privacy Policy</a> |
+        <a href="terms.html">Terms & Conditions</a> |
+        <a href="refund-policy.html">Refund & Return Policy</a><br>
+        For inquiries, contact us at <a href="mailto:contact@mariecustomgoods.com">contact@mariecustomgoods.com</a>
+      </p>
     </footer>
 
     <script>
